--- a/app/src/main/res/layout/fragment_sub.xml
+++ b/app/src/main/res/layout/fragment_sub.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/tv_result"
+        android:id="@+id/sub_fragment_tv_result"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:textSize="32sp"
